Bug 91035 - UI: Available paragraph styles in Conditional Style defaults to All Styles but dropdown says Hidden Styles
Summary: UI: Available paragraph styles in Conditional Style defaults to All Styles b...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium minor
Assignee: Justin L
URL:
Whiteboard: target:7.4.0 target:7.3.4
Keywords:
Depends on:
Blocks: Paragraph-Dialog
  Show dependency treegraph
 
Reported: 2015-05-03 00:24 UTC by Gordo
Modified: 2022-05-06 17:39 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gordo 2015-05-03 00:24:39 UTC
1. New Text Document.
2. In Sidebar → Styles and Formatting, right click and select New.
3. Select Condition tab and check Conditional Style.
Result:
The Paragraph Styles list on the right has a dropdown that says Hidden Styles.  What is actually shown is All Styles.  Select All Styles from the dropdown and the list contents are the same.
Expected Result:
Dropdown should say All Styles.

1 instead of 0?

Version: 4.4.3.2
Build ID: 88805f81e9fe61362df02b9941de8e38a9b5fd16
Comment 1 Buovjaga 2015-05-06 16:53:21 UTC
Reproduced. After switching to All styles and back to Hidden styles, the list becomes empty.
3.3.0 shows Applied styles as the default, listing everything. Switching away and back to Applied styles leaves only Default, so the problem might be the same.

Win 7 Pro 64-bit Version: 5.0.0.0.alpha1+ (x64)
Build ID: 98436c4b53639d86f261ac630c46d32e3c7b8e28
TinderBox: Win-x86_64@42, Branch:master, Time: 2015-05-04_00:07:10
Locale: fi-FI (fi_FI)

Ubuntu 15.04 64-bit 
OpenOffice.org 3.3.0
OOO330m20 (Build:9567)

4.2.8.2
Comment 2 QA Administrators 2016-09-20 09:38:22 UTC Comment hidden (obsolete)
Comment 3 Kenneth Hanson 2018-09-17 03:43:34 UTC
Reproduced Gordo's problem on v6.1.1.2. Didn't reproduce list becoming empty like in comment #1.
Comment 4 QA Administrators 2021-04-16 03:56:32 UTC Comment hidden (obsolete)
Comment 5 Justin L 2022-05-05 19:20:02 UTC
fixed with http://gerrit.libreoffice.org/c/core/+/133911
Comment 6 Commit Notification 2022-05-06 11:16:40 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3a79bd968869f782b8540aea6598c1f8ee14cced

tdf#91035 sw page-style UI: All styles shown, not hidden

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2022-05-06 13:56:10 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/ba9e78e00fda5438fa743dd44f4a3b2f854cf61f

tdf#91035 sw page-style UI: All styles shown, not hidden

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-05-06 17:39:24 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/701591fac7eea1ac797bbc328cc934434ffb714e

tdf#148920, tdf#91035: sw: Add UItest

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.