tdf#91035 sw page-style UI: All styles shown, not hidden

The first entry in the list (All styles) is what is shown
by default, so that means that the 0th entry should be
pre-selected, not the 1st.

Change-Id: I4c204fda41a0551b9f30724df361e4f797a87325
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133911
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit 3a79bd968869f782b8540aea6598c1f8ee14cced)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133862
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>